--- a/package.json
+++ b/package.json
@@ -10,26 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
     "dev":   "nodemon backend/server.js",
-    "frontend": "npm start --prefix client",
-    "frontendinstall": "npm install --prefix client",
+    "frontend": "npm start --prefix frontend",
+    "frontendinstall": "npm install --prefix frontend",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build -- prefix frontend"
 
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "js-cookie": "^3.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20",
-    "stripe": "^12.0.0"
   }
 }
