--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eshop-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "backend/server.js",
   "engines": {
    "node": "18.16.0"
   },
